add detailed doc; TODO: ncn apis
